--- a/src/NavtelecomProtocol/project.json
+++ b/src/NavtelecomProtocol/project.json
@@ -1,13 +1,18 @@
 ﻿{
-  "version": "1.0.0-*",
+  "title": "NavtelecomProtocol",
+  "version": "0.1.0",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "SharpNetwork": "0.1.0"
   },
 
   "frameworks": {
-    "netstandard1.6": {
-      "imports": "dnxcore50"
-    }
+    "net450": {}
+  },
+
+  "scripts": {
+    "postcompile": [
+      "dotnet pack --no-build --configuration %compile:Configuration%"
+    ]
   }
 }
